Final suggestions